# mortier

./: .gitignore  README.md  config.ini  pyproject.toml
mortier/: .face.py.swn  coords.py  create_book.py  face.py  hyperbolic.py  main.py  math_utils.py  mortier.py  penrose.py  tesselation.py
mortier/writer/: __init__.py  bitmap_writer.py  svg_writer.py  tikz_writer.py  tikz_writer.py~  writer.py
src/mortier/: create_book.py  face.py  fix_page.py  hyperbolic.py  main.py  math_utils.py  penrose.py  tesselation.py
src/mortier/coords/: __init__.py  coords.py  euclidean_coords.py  lattice_coords.py  line.py
src/mortier/enums/: __init__.py  file_type.py  hatch_type.py  ornements_type.py  param_type.py  regular_tesselation_type.py  tesselation_type.py  tile_type.py
src/mortier/face/: __init__.py  face.py  p2_tile.py  p3_tile.py
src/mortier/tesselation/: __init__.py  hyperbolic.py  penrose.py  regular_tesselation.py  tesselation.py
src/mortier/utils/: geometry.py  math_utils.py
src/mortier/writer/: __init__.py  bitmap_writer.py  svg_writer.py  tikz_writer.py  writer.py
src/mortier/writer/hatching/: __init__.py  hatching.py
tests/: test_face.py
tests/benchmarks/: test_benchmark_face.py  test_benchmark_regular_tess.py
tests/coords/: test_euclidean.py  test_lattice.py  test_line.py
tests/face/: test_face.py
tests/tesselation/: test_hyperbolic.py  test_penrose.py  test_regular_tesselation.py  test_tesselation.py
tests/utils/: test_geometry.py
tests/writer/: test_bitmap_writer.py  test_svg_writer.py  test_tikz_writer.py  test_writer.py
(+2 files in other folders)
