[tool.poetry]
name = "mortier"
version = "0.2.1"
description = ""
authors = ["Epsilon"]
packages = [{ include = "mortier", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
svgwrite = "^1.4.3"
numpy = "^2.3.1"
pillow = "^11.3.0"
noise = "^1.2.2"
hypertiling = "^1.4.1"
pytest = "^9.0.2"
click = "^8.3.1"


[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
