[tool.poetry]
name = "mortier"
version = "0.3.6"
description = ""
authors = ["Epsilon"]
packages = [{ include = "mortier", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
svgwrite = "^1.4.3"
numpy = "^2.3.1"
pillow = "^11.3.0"
noise = "^1.2.2"
hypertiling = "^1.4.1"
pytest = "^9.0.2"
click = "^8.3.1"
black = "^26.1.0"
isort = "^7.0.0"
ruff = "^0.15.0"
pylint = "^4.0.4"
pytest-codspeed = "^4.3.0"

[tool.poetry.scripts]
mortier = "mortier.main:tess_param"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
